Update navbar to fixed and align menu to the right with ml-auto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,7 @@ footer {
 /*------------Home/About----*/
 
 .main-home-image {
+    margin-top: 5rem;
     max-width: 100%;
     height: auto;
 }
